parser/src/parser/snapshots/parser__parser__parser__tests__generator_expression-4.snap
---
source: parser/src/parser/parser.rs
description: (a for a in b for c in d)
---
Module {
    node: Node {
        start: 0,
        end: 25,
    },
    body: [
        ExpressionStatement(
            Generator(
                Generator {
                    node: Node {
                        start: 0,
                        end: 25,
                    },
                    element: Name(
                        Name {
                            node: Node {
                                start: 1,
                                end: 2,
                            },
                            id: "a",
                        },
                    ),
                    generators: [
                        Comprehension {
                            node: Node {
                                start: 3,
                                end: 13,
                            },
                            target: Name(
                                Name {
                                    node: Node {
                                        start: 7,
                                        end: 8,
                                    },
                                    id: "a",
                                },
                            ),
                            iter: Name(
                                Name {
                                    node: Node {
                                        start: 12,
                                        end: 13,
                                    },
                                    id: "b",
                                },
                            ),
                            ifs: [],
                            is_async: false,
                        },
                        Comprehension {
                            node: Node {
                                start: 14,
                                end: 24,
                            },
                            target: Name(
                                Name {
                                    node: Node {
                                        start: 18,
                                        end: 19,
                                    },
                                    id: "c",
                                },
                            ),
                            iter: Name(
                                Name {
                                    node: Node {
                                        start: 23,
                                        end: 24,
                                    },
                                    id: "d",
                                },
                            ),
                            ifs: [],
                            is_async: false,
                        },
                    ],
                },
            ),
        ),
    ],
}
