parser/src/parser/snapshots/parser__parser__parser__tests__if-5.snap
---
source: parser/src/parser/parser.rs
description: "if a is b:\n            pass"
---
Module {
    node: Node {
        start: 0,
        end: 27,
    },
    body: [
        IfStatement(
            If {
                node: Node {
                    start: 3,
                    end: 27,
                },
                test: Compare(
                    Compare {
                        node: Node {
                            start: 3,
                            end: 9,
                        },
                        left: Name(
                            Name {
                                node: Node {
                                    start: 3,
                                    end: 4,
                                },
                                id: "a",
                            },
                        ),
                        ops: [
                            Is,
                        ],
                        comparators: [
                            Name(
                                Name {
                                    node: Node {
                                        start: 8,
                                        end: 9,
                                    },
                                    id: "b",
                                },
                            ),
                        ],
                    },
                ),
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 23,
                                end: 27,
                            },
                        },
                    ),
                ],
                orelse: [],
            },
        ),
    ],
}
